# OpenSoar

./: .gitignore  AUTHORS  CMake2Meson.cmd  CMakeLists.txt  CMakeSource.cmake  CMakeXCSoar.py  Makefile  NEWS.txt  OpenSoar-News.md  README.md  Start-CMake-XCSoar.py  TestPerl.cmd  VERSION.txt  XCSoar.config  meson.build
Data/: CMakeLists.txt  XCSoar2.rc
src/: CMakeLists.txt  CMakeSource.cmake  CommandLine.cpp  DataGlobals.cpp  LocalPath.cpp  LogFile.cpp  LogFile.hpp  MainWindow.cpp  MainWindow.hpp  Message.cpp  Message.hpp  PageSettings.cpp  PageSettings.hpp  PopupMessage.cpp  PopupMessage.hpp  ProgressWindow.cpp  ResourceLoader.hpp  Resources.hpp  Startup.cpp  UIActions.cpp  VALI-XCS.cpp  XCSoar.cpp
src/Android/: Bitmap.hpp  Main.cpp  NativeView.cpp
src/Apple/: SoundUtil.cpp  SoundUtil.hpp
src/Audio/: GlobalPCMMixer.cpp  PCMPlayerFactory.hpp
src/Cloud/: CMakeSource.cmake
src/Cloud/weglide/: DownloadTask.cpp  DownloadTask.hpp  UploadFlight.cpp  UploadFlight.hpp  WeGlideObjects.hpp  WeGlideSettings.cpp  WeGlideSettings.hpp
src/Compatibility/: path.h
src/Computer/: CMakeSource.cmake  Settings.hpp
src/Device/: CMakeSource.cmake  Dispatcher.hpp  MultipleDevices.cpp  MultipleDevices.hpp  Register.cpp
src/Device/Driver/: Anemoi.cpp  FreeVario.cpp  Larus.cpp
src/Device/Driver/FLARM/: Device.cpp  Device.hpp
src/Device/Driver/Volkslogger/: Declare.cpp
src/Device/Port/: TTYEnumerator.cpp
src/Dialogs/: CMakeLists.txt  CMakeSource.cmake  FileManager.cpp  FilePicker.cpp  ListPicker.cpp  ListPicker.hpp  MultiFilePicker.cpp  StartupDialog.cpp  dlgAnalysis.cpp  dlgChecklist.cpp  dlgCredits.cpp  dlgInfoBoxAccess.cpp
src/Dialogs/Cloud/: WeGlideTaskDialog.hpp  WeGlideUploadDialog.cpp  WeGlideUploadDialog.hpp
src/Dialogs/Contest/WeGlide/: FlightDataDialog.cpp  FlightDataDialog.hpp  FlightDeleteDialog.cpp  FlightPatchDialog.cpp  FlightUploadDialog.cpp  FlightUploadDialog.hpp  FlightUploadResponse.cpp  FlightUploadResponse.hpp  PrepareFlightUploadDialog.cpp  PrepareFlightUploadDialog.hpp  TaskDownloadDialog.cpp  TaskDownloadDialog.hpp  UserSelection.cpp
src/Dialogs/Device/: DeviceListDialog.cpp  ManageFlarmDialog.cpp
src/Dialogs/Device/FLARM/: ConfigWidget.cpp  (+1 more)
src/Dialogs/Plane/: PlaneListDialog.cpp
src/Dialogs/Settings/: dlgConfigInfoboxes.cpp
src/Dialogs/Task/: WeGlideTaskDialog.cpp
src/Dialogs/Tracking/: CloudEnableDialog.cpp
src/Dialogs/Traffic/: TeamCodeDialog.cpp
src/Dialogs/Waypoint/: dlgWaypointDetails.cpp
src/Engine/Waypoint/: Waypoints.hpp
src/FLARM/: Details.cpp  List.hpp
src/Form/: CheckBox.cpp  Edit.cpp  Form.cpp  TabMenuDisplay.cpp
src/Form/DataField/: Password.cpp
src/Formatter/: ByteSizeFormatter.cpp  IGCFilenameFormatter.cpp  Units.cpp
src/Gauge/: CMakeLists.txt  CMakeSource.cmake  LogoView.cpp  NavigatorWidget.cpp  NavigatorWidget.hpp
src/Hardware/: CMakeSource.cmake
src/InfoBoxes/: Data.hpp  InfoBoxWindow.cpp
src/InfoBoxes/Content/: Alternate.cpp  Contest.cpp  Factory.cpp  Radio.cpp  Task.cpp  Thermal.cpp  Weather.cpp
src/Input/: CMakeLists.txt  InputEvents.cpp  InputEvents.hpp  InputEventsActions.cpp  InputEventsMap.cpp  InputEventsSettings.cpp  InputEventsTask.cpp  InputParser.cpp
src/LangLinux/: Language.cpp  Language.hpp  LanguageGlue.cpp  LanguageGlue.hpp
src/Language/: CMakeLists.txt
src/Logger/: CMakeLists.txt  ExternalLogger.cpp
src/Look/: CMakeSource.cmake  InfoBoxLook.cpp  Look.hpp
src/MapWindow/: GlueMapWindowOverlays.cpp  OverlayBitmap.cpp
src/MapWindow/Items/: MapItem.hpp
src/Math/: CMakeLists.txt  Classify.hpp  Constants.hpp
src/Menu/: CMakeLists.txt
src/Monitor/: MatTaskMonitor.cpp
src/OV/: OpenVarioMenu.cpp
src/Operation/: CMakeSource.cmake
src/Polar/: PolarStore.cpp
src/Profile/: ComputerProfile.cpp  Keys.hpp  Profile.cpp  ProfileKeys.cpp  ProfileKeys.hpp
src/Renderer/: BarographRenderer.cpp  CMakeSource.cmake  ChartRenderer.cpp  ClimbChartRenderer.cpp  FlightStatisticsRenderer.cpp  FlightStatisticsRenderer.hpp  MapItemListRenderer.cpp  NavigatorRenderer.cpp  NavigatorRenderer.hpp  TabRenderer.hpp  TaskSpeedRenderer.cpp
src/Screen/: CMakeLists.txt
src/Terrain/: CMakeLists.txt  CMakeSource.cmake  Loader.cpp  RasterTerrain.cpp  RasterTileCache.cpp
src/Terrain/jasper/: jas_config.h
src/Topography/: CMakeLists.txt  CMakeSource.cmake  XShape.cpp
src/Topography/shapelib/: mapserver-config.h
src/Tracking/: CMakeLists.txt  CMakeSource.cmake
src/Waypoint/: SaveGlue.cpp  WaypointGlue.cpp
src/Weather/: Features.hpp  METARParser.cpp
src/Weather/Rasp/: RaspStore.cpp
src/Weather/Skysight/: APIQueue.cpp  APIQueue.hpp  CDFDecoder.cpp  CDFDecoder.hpp  Skysight.cpp  SkysightAPI.cpp
src/Widget/: ArrowPagerWidget.cpp  CMakeSource.cmake  OffsetButtonsWidget.cpp  ProgressWidget.cpp  RowFormWidget.cpp
src/XML/: DataNode.cpp
src/co/: CMakeLists.txt  CMakeSource.cmake
src/contest/: CMakeLists.txt  CMakeSource.cmake
src/contest/weglide/: UploadIGCFile.cpp  UploadIGCFile.hpp
src/event/: CMakeLists.txt
src/io/: BufferedOutputStream.cxx  BufferedOutputStream.hxx  CMakeSource.cmake  ZipArchive.cpp
src/json/: CMakeSource.cmake  File.cpp  File.hpp  Get.cpp  Get.hpp
src/lib/: CMakeLists.txt
src/lib/curl/: Easy.hxx
src/lib/fmt/: ExceptionFormatter.hxx  PathFormatter.hpp  RuntimeError.hxx  SystemError.hxx  ToBuffer.hxx
src/lib/sodium/: SHA256.hxx
src/lua/: CMakeLists.txt  CMakeSource.cmake  Cloud.cpp  Cloud.hpp  Full.cpp
src/net/: CMakeSource.cmake  SocketDescriptor.hxx  ToString.cxx
src/net/http/: Easy.hxx
src/system/: Args.hpp  CMakeSource.cmake  ConvertPathName.hpp  FileUtil.cpp
src/thread/: Thread.cpp
src/time/: BrokenDateTime.cpp  CMakeSource.cmake  DateTime.hpp  RoughTime.hpp
src/ui/: CMakeLists.txt  CMakeSource.cmake
src/ui/control/: LargeTextWindow.hpp  TerminalWindow.cpp
src/ui/window/: Window.hpp
src/unix/: tchar.h
src/util/: BindMethod.hxx  BindMethodWin.hxx  CMakeSource.cmake  Compiler.h  CompilerMSVC.h  DecimalParser.cxx  WStringAPI.hxx
src/util/msvc/: Compiler.h
src/zzip/: CMakeLists.txt  zzip-1.h
tools/: CMakeLists.txt
(+78 files in other folders)
